--- a/biblioteca/app/templates/consulta/consulta.html
+++ b/biblioteca/app/templates/consulta/consulta.html
@@ -48,7 +48,7 @@
               <th scope="col">Nome</th>
               <th scope="col">Autor</th>
               <th scope="col">Editora</th>
-              <th scope="col">Gênero</th>
+              <th scope="col">Categoria</th>
               <th scope="col">Preço</th>
               <th scope="col">Data Publicação</th>
               <th scope="col">Status</th>
@@ -59,9 +59,13 @@
            <td>{{Livro.nome}}</td>
            <td>{{Livro.autor}}</td>
            <td>{{Livro.editora}}</td>
-           <td>{{Livro.categoria}}</td>
+           <td>{% for categoria in Livro.categoria.all %}
+            {{ categoria.nome }}{% if not forloop.last %}, {% endif %}
+            {% endfor %}
+           </td>
            <td>{{Livro.preco}}</td>
            <td>{{Livro.data_publicacao}}</td>
+           <td>{{Livro.status}}</td>
           </tbody>
            {% endfor %} 
         </table>
