--- a/biblioteca/app/templates/editoras/editoras.html
+++ b/biblioteca/app/templates/editoras/editoras.html
@@ -41,7 +41,7 @@
   </nav>
 
   <div class="container mt-5">
-    <h2 class="mb-4">Tabela de Editoras</h2>
+    <h2 class="mb-4">Tabela de editoras</h2>
         <table class="table">
           <thead>
             <tr>
