--- a/biblioteca/app/templates/index.html
+++ b/biblioteca/app/templates/index.html
@@ -42,9 +42,9 @@
 
   <div class="container mt-5">
     <div class="jumbotron text-center">
-      <h1 class="display-4">Olá, é bom te ver por aqui</h1>
-      <p class="lead">Esta é a página inicial da Biblioteca</p>
-      <p class="lead">Seja Bem Vindo(A)</p>
+      <h1 class="display-4">Olá, é bom te ver por aqui!</h1>
+      <p class="lead">Esta é a página inicial da Biblioteca.</p>
+      <p class="lead">Seja bem-vindo(a)!</p>
     </div>
   </div>
 
