--- a/biblioteca/app/templates/autores/autores.html
+++ b/biblioteca/app/templates/autores/autores.html
@@ -41,13 +41,14 @@
   </nav>
 
   <div class="container mt-5">
-    <h2 class="mb-4">Tabela de Autores</h2>
+    <h2 class="mb-4">Tabela de autores</h2>
         <table class="table">
           <thead>
             <tr>
               <th scope="col">Nome</th>
               <th scope="col">Site</th>
               <th scope="col">Cidade</th>
+            </tr>
             {% for Autor in autores %}
           </thead>
           <tbody>
