--- a/biblioteca/app/templates/categorias/categorias.html
+++ b/biblioteca/app/templates/categorias/categorias.html
@@ -41,7 +41,7 @@
   </nav>
 
   <div class="container mt-5">
-    <h2 class="mb-4">Tabela de Categorias</h2>
+    <h2 class="mb-4">Tabela de categorias</h2>
         <table class="table">
           <thead>
             <tr>
