--- a/biblioteca/app/templates/consulta/consulta.html
+++ b/biblioteca/app/templates/consulta/consulta.html
@@ -41,16 +41,16 @@
   </nav>
 
   <div class="container mt-5">
-    <h2 class="mb-4">Tabela de Livros</h2>
+    <h2 class="mb-4">Tabela de livros</h2>
         <table class="table">
           <thead>
             <tr>
               <th scope="col">Nome</th>
               <th scope="col">Autor</th>
               <th scope="col">Editora</th>
-              <th scope="col">Categoria</th>
+              <th scope="col">Categorias</th>
               <th scope="col">Preço</th>
-              <th scope="col">Data Publicação</th>
+              <th scope="col">Data de publicação</th>
               <th scope="col">Status</th>
             </tr>
             {% for Livro in consultas %}
